include_directories(inc ${LIBZLOG_INC_DIR})
add_definitions(-Wno-format-security -DCMM_FLAGS -DSIMPLE_AUTH -D_RT_SUPPORT)
FILE (GLOB CMM_SRC_LIST "src/*.c" "inc/*.c")
#list(REMOVE_ITEM CMM_SRC_LIST "remove.c")
ADD_LIBRARY(cmm_static STATIC ${CMM_SRC_LIST})
SET_TARGET_PROPERTIES(cmm_static PROPERTIES OUTPUT_NAME "cmm")
GET_TARGET_PROPERTY (OUTPUT_VALUE cmm_static OUTPUT_NAME)
MESSAGE (STATUS "This is the cmm_static OUTPUT_NAME: " ${OUTPUT_VALUE})
SET_TARGET_PROPERTIES(cmm_static PROPERTIES CLEAN_DIRECT_OUTPUT 1)
