include_directories(${LIBZLOG_INC_DIR})
include_directories(../common/inc)
include_directories(../share)
include_directories(../share/FAPI_Head)
if(BUILD_ATLL_SHM)
    include_directories(../atl/interface)
else()
    include_directories(${PCIE_DRIVER_INCLUDE_DIR})
endif(BUILD_ATLL_SHM)
include_directories(inc)
add_definitions()
FILE (GLOB CMM_SRC_LIST "src/*.c" )
#list(REMOVE_ITEM CMM_SRC_LIST "remove.c")
ADD_LIBRARY(mac_static STATIC ${CMM_SRC_LIST})
SET_TARGET_PROPERTIES(mac_static PROPERTIES OUTPUT_NAME "mac")
GET_TARGET_PROPERTY (OUTPUT_VALUE mac_static OUTPUT_NAME)
MESSAGE (STATUS "This is the mac_static OUTPUT_NAME: " ${OUTPUT_VALUE})
SET_TARGET_PROPERTIES(mac_static PROPERTIES CLEAN_DIRECT_OUTPUT 1)

if(BUILD_ATLL_SHM)
    add_definitions(-Wno-format-security -Wno-unused-parameter -Wno-unused-function -DATLL_SHM)
else()
    add_definitions(-Wno-format-security -Wno-unused-parameter -Wno-unused-function -DATLL_PCIE)
endif(BUILD_ATLL_SHM)
